# KRIGA

./: .gitignore  CMakeLists.txt  INSTALL  README.md
cmake/: FindGA.cmake
src/: CMakeLists.txt  distance.hpp  kernels.hpp  kriga.cpp  kriga.hpp  kriging.cpp  kriging.hpp
test/: CMakeLists.txt
test/kriga_test_1/: CMakeLists.txt
test/kriging_test_1/: main.cpp
